--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,8 +7,12 @@ COPY package*.json ./
 
 RUN npm install
 
+RUN npm install -g serve
+
 COPY . .
 
-EXPOSE 3001
+RUN npm run build
 
-CMD ["npm", "start"]
+EXPOSE 3000
+
+CMD ["serve", "-s", "build"]
